kubernetes/k3s-prod-a/readarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: docker.io/linuxserver/readarr:0.4.8-nightly@sha256:340fb3140a807a5bc1abf8232863cb6487ce2d9d4b4a8b001137f858c62926b5
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: readarr-config
              mountPath: /config
            - name: readarr-downloads
              mountPath: /downloads
            - name: readarr-books
              mountPath: /books
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: readarr-downloads
          persistentVolumeClaim:
            claimName: readarr-downloads
        - name: readarr-books
          persistentVolumeClaim:
            claimName: readarr-books
