kubernetes/k3s-prod-a/readarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: torrenting
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: 8787
      protocol: TCP
  selector:
    app: readarr
